# iot-venture-f25-chicken-nuggets

./: .gitignore  CMakeLists.txt  README.md  do_not_use_this_key.pem  graph.py  private_key.pem  prj.conf  readme_for_lora_setup.md  sample.yaml
.github/workflows/: zephyr-ci.yml
boards/: nrf7002dk_nrf5340_cpuapp_ns.overlay
zephyr_app/: CMakeLists.txt  VERSION  pm_static.yml.bak  prj.conf  sysbuild.conf  west.yml
zephyr_app/boards/: nrf7002dk_nrf5340_cpuapp.conf  nrf7002dk_nrf5340_cpuapp.overlay  nrf7002dk_nrf5340_cpuapp_ns.overlay
zephyr_app/child_image/: mcuboot.conf
zephyr_app/child_image/mcuboot/: prj.conf
zephyr_app/child_image/mcuboot/boards/: nrf7002dk_nrf5340_cpuapp.overlay
zephyr_app/config/: memfault_metrics_heartbeat_config.def  memfault_platform_config.h  memfault_trace_reason_user_config.def  nrf-config-user.h
zephyr_app/include/: blink.h  color.h  lorawan.h  pir.h  sths34pf80_reg.h  wifi_ota.h
zephyr_app/src/: blink.c  color.c  lorawan.c  main.c  main_backup.c  pir.c  wifi_ota.c
zephyr_app/sysbuild/: mcuboot.conf  mcuboot.overlay
zephyr_app/sysbuild_backup/sysbuild/: mcuboot.overlay
zephyr_app/tests/PIR_UNIT_TEST/: CMakeLists.txt  prj.conf  testcase.yaml
zephyr_app/tests/PIR_UNIT_TEST/src/: pir_test.c
